Added Example for test plugin with docker-compose

--- a/source/AAS.TwinEngine.DataEngine/appsettings.json
+++ b/source/AAS.TwinEngine.DataEngine/appsettings.json
@@ -11,12 +11,8 @@
   "PluginConfig": {
     "Plugins": [
       {
-        "PluginName": "Plugin1",
+        "PluginName": "Plugin",
         "PluginUrl": "http://localhost:8086"
-      },
-      {
-        "PluginName": "Plugin2",
-        "PluginUrl": "http://localhost:8087"
       }
     ]
   },
