Added example folder With Dpp-plugin  (#13)

--- a/source/AAS.TwinEngine.DataEngine/appsettings.development.json
+++ b/source/AAS.TwinEngine.DataEngine/appsettings.development.json
@@ -13,10 +13,6 @@
       {
         "PluginName": "Plugin1",
         "PluginUrl": "http://localhost:8086"
-      },
-      {
-        "PluginName": "Plugin2",
-        "PluginUrl": "http://localhost:8087"
       }
     ]
   },
@@ -56,6 +52,18 @@
       {
         "templateId": "https://admin-shell.io/idta/SubmodelTemplate/ContactInformation/1/0",
         "pattern": [ "ContactInformation" ]
+      },
+      {
+        "templateId": "https://admin-shell.io/ZVEI/TechnicalData/Submodel/1/2",
+        "pattern": [ "TechnicalData" ]
+      },
+      {
+        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/CarbonFootprint/1/0",
+        "pattern": [ "CarbonFootprint" ]
+      },
+      {
+        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/HandoverDocumentation/2/0",
+        "pattern": [ "HandoverDocumentation" ]
       }
     ],
     "ShellTemplateMappings": [
