--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./example/nginx/html:/usr/share/nginx/html
-      - ./example/nginx/default.conf.template:/etc/nginx/templates/default.conf.template
+      - ./nginx/html:/usr/share/nginx/html
+      - ./nginx/default.conf.template:/etc/nginx/templates/default.conf.template
     restart: always
     depends_on:
       aas-template-registry:
@@ -23,9 +23,7 @@ services:
       - twinengine-network
 
   twinengine-dataengine:
-    image: ghcr.io/aas-twinengine/dataengine:latest
-    ports:
-    - '8085:8080'
+    image: dataengine:1.0.0
     container_name: twinengine-dataengine
     depends_on:
       plugin:
@@ -70,9 +68,7 @@ services:
       - twinengine-network
 
   plugin:
-    image: ghcr.io/aas-twinengine/plugindpp:latest
-    ports:
-    - '8086:8080'
+    image: plugindpp:1.0.0
     container_name: plugin
     depends_on:
       postgres:
@@ -107,11 +103,9 @@ services:
   template-repository:
     image: eclipsebasyx/aas-environment:2.0.0-SNAPSHOT
     container_name: template-repository
-    ports:
-      - "8081:8081"
     volumes:
-      - ./example/aas:/application/aas
-      - ./example/basyx/aas-env.properties:/application/application.properties
+      - ./aas:/application/aas
+      - ./basyx/aas-env.properties:/application/application.properties
     environment:
       BASYX_EXTERNALURL : http://localhost:8080
     restart: always
@@ -126,8 +120,6 @@ services:
   aas-template-registry:
     image: eclipsebasyx/aas-registry-log-mongodb:2.0.0-SNAPSHOT
     container_name: aas-template-registry
-    ports:
-      - '8082:8080'
     restart: always
     depends_on:
       - mongo
@@ -139,8 +131,6 @@ services:
   sm-template-registry:
     image: eclipsebasyx/submodel-registry-log-mongodb:2.0.0-SNAPSHOT
     container_name: sm-template-registry
-    ports:
-      - '8083:8080'
     depends_on:
       - mongo
     environment:
@@ -171,7 +161,7 @@ services:
     image: eclipsebasyx/aas-gui:SNAPSHOT
     container_name: aas-ui
     volumes:
-      - ./example/logo:/usr/src/app/dist/Logo
+      - ./logo:/usr/src/app/dist/Logo
     environment:
       AAS_REGISTRY_PATH: http://localhost:8080/shell-descriptors
       SUBMODEL_REGISTRY_PATH: http://localhost:8080/submodel-descriptors
@@ -192,8 +182,6 @@ services:
   mongo:
     image: mongo:6.0
     container_name: mongo
-    ports:
-      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongoAdmin
       MONGO_INITDB_ROOT_PASSWORD: mongoPassword
@@ -203,14 +191,12 @@ services:
   postgres:
     image: postgres:16-alpine
     container_name: postgres
-    ports:
-      - "5432:5432"
     environment:
       POSTGRES_DB: twinengine
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
     volumes:
-      - ./example/postgres:/docker-entrypoint-initdb.d
+      - ./postgres:/docker-entrypoint-initdb.d
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d twinengine"]
