--- a/source/AAS.TwinEngine.DataEngine/appsettings.json
+++ b/source/AAS.TwinEngine.DataEngine/appsettings.json
@@ -11,8 +11,8 @@
   "PluginConfig": {
     "Plugins": [
       {
-        "PluginName": "Plugin",
-        "PluginUrl": "http://localhost:8086"
+        "PluginName": "",
+        "PluginUrl": ""
       }
     ]
   },
@@ -42,33 +42,13 @@
   "TemplateMappingRules": {
     "SubmodelTemplateMappings": [
       {
-        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/Reliability/1/0",
-        "pattern": [ "Reliability" ]
-      },
-      {
-        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/DigitalNameplate/3/0",
-        "pattern": [ "Nameplate" ]
-      },
-      {
-        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/ContactInformation/1/0",
-        "pattern": [ "ContactInformation" ]
-      },
-      {
-        "templateId": "https://admin-shell.io/ZVEI/TechnicalData/Submodel/1/2",
-        "pattern": [ "TechnicalData" ]
-      },
-      {
-        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/CarbonFootprint/1/0",
-        "pattern": [ "CarbonFootprint" ]
-      },
-      {
-        "templateId": "https://admin-shell.io/idta/SubmodelTemplate/HandoverDocumentation/2/0",
-        "pattern": [ "HandoverDocumentation" ]
+        "templateId": "",
+        "pattern": [ "" ]
       }
     ],
     "ShellTemplateMappings": [
       {
-        "templateId": "https://mm-software.com/aas/aasTemplate",
+        "templateId": "",
         "pattern": [ "" ]
       }
     ],
@@ -77,11 +57,6 @@
         "Pattern": "Regex",
         "Index": 3,
         "Separator": ":"
-      },
-      {
-        "Pattern": "Regex",
-        "Index": 6,
-        "Separator": "/"
       }
     ]
   },
