--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - twinengine-network
 
   twinengine-dataengine:
-    image: dataengine:1.0.0
+    image: ghcr.io/aas-twinengine/dataengine:1.0.0
     container_name: twinengine-dataengine
     depends_on:
       plugin:
@@ -68,7 +68,7 @@ services:
       - twinengine-network
 
   plugin:
-    image: plugindpp:1.0.0
+    image: ghcr.io/aas-twinengine/plugindpp:1.0.0
     container_name: plugin
     depends_on:
       postgres:
