Enhance README and docker-compose for PGAdmin integration and clarity

--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -205,3 +205,18 @@ services:
       retries: 5
     networks:
       - twinengine-network
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    ports:
+      - "8081:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: always
+    networks:
+      - twinengine-network
