Add hotfix develop release branches to actions (#15)
* Update dependency-review.yml

* Update dotnet.yml

* Update docker-publish.yml

* Update docker-publish.yml to refine branch triggers and enhance Docker metadata extraction

* Fix image name

* Add manually trigger a workflow

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -13,6 +13,8 @@ on:
     branches:
       - 'main'
       - 'develop'
+      - 'release/**'
+      - 'hotfix/**'
 
 # If using a dependency submission action in this workflow this permission will need to be set to:
 #
