--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,10 +5,14 @@ on:
     branches: 
     - 'main'
     - 'develop'
+    - 'release/**'
+    - 'hotfix/**'
   push:
     branches: 
     - 'main'
     - 'develop'
+    - 'release/**'
+    - 'hotfix/**'
 
 permissions:
   contents: read
