--- a/source/AAS.TwinEngine.DataEngine/appsettings.json
+++ b/source/AAS.TwinEngine.DataEngine/appsettings.json
@@ -55,8 +55,8 @@
     "AasIdExtractionRules": [
       {
         "Pattern": "Regex",
-        "Index": 3,
-        "Separator": ":"
+        "Index": 6,
+        "Separator": "/"
       }
     ]
   },
