--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,13 +9,11 @@ updates:
     target-branch: "develop"
     directory: "/source"
     groups:
-      minor:
+      major-minor-patch:
         applies-to: version-updates
         update-types:
+          - "major"
           - "minor"
-      patch:
-        applies-to: version-updates
-        update-types:
           - "patch"
     schedule:
       interval: "weekly"
@@ -24,7 +22,14 @@ updates:
 
   - package-ecosystem: "docker"
     target-branch: "develop"
-    directory: "/source/AAS.TwinEngine.DataEngine"
+    directory: "/source/AAS.TwinEngine.Plugin.RelationalDatabase"
+    groups:
+      major-minor-patch:
+        applies-to: version-updates
+        update-types:
+          - "major"
+          - "minor"
+          - "patch"
     schedule:
       interval: "daily"
 
