--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: dataaxiom/ghcr-cleanup-action@v1
         with:
           dry-run: true
+          package: dataengine
           exclude-tags: v**, rc-release**, hotfix**
           delete-untagged: true
           older-than: 90 days
