--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: dataaxiom/ghcr-cleanup-action@v1
         with:
-          dry-run: true
+          # dry-run: true
           package: dataengine
           exclude-tags: v**, rc-release**, hotfix**
           delete-untagged: true
-          older-than: 5 hours
+          older-than: 90 days
