--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -106,6 +106,12 @@ jobs:
           push: false
           outputs: type=local,dest=sbom-output
 
+      # Extract the first tag from the list for Trivy scanning
+      - name: Get first image tag
+        if: ${{ github.event_name != 'pull_request' }}
+        id: first-tag
+        run: echo "value=$(echo '${{ steps.meta.outputs.tags }}' | head -n1)" >> $GITHUB_OUTPUT
+
       # Generate container SBOM. 
       - name: Run Trivy in GitHub SBOM mode to generate CycloneDX SBOM for container
         if: ${{ github.event_name != 'pull_request' }}
@@ -114,7 +120,7 @@ jobs:
           scan-type: 'image'
           format: 'cyclonedx'
           output: 'sbom-output/sbom_container.cyclonedx.json'
-          image-ref: ${{ fromJSON(steps.meta.outputs.tags)[0] }}
+          image-ref: ${{ steps.first-tag.outputs.value }}
           skip-dirs: '/App' # Skip the /app directory as we handle the content of the application in a seperate SBOM for easier vulnerability management and because trivy misses important fields
           
       - name: Upload trivy/container AND application SBOMs as a Github artifact
