Fix :  TestPlugin : 404 - file entries (#34)

--- a/source/AAS.TwinEngine.Plugin.TestPlugin/Example/docker-compose.yml
+++ b/source/AAS.TwinEngine.Plugin.TestPlugin/Example/docker-compose.yml
@@ -163,8 +163,8 @@ services:
       CD_REPO_PATH: http://localhost:8080/concept-descriptions
       BASE_PATH: "/aas-ui"
       LOGO_PATH: "MM_Logo.svg"
-      PRIMARY_DARK_COLOR: "#EBECED"
-      PRIMARY_LIGHT_COLOR: "#00F2E5"
+      PRIMARY_DARK_COLOR: "#00F2E5"
+      PRIMARY_LIGHT_COLOR: "#041b2b"
     restart: always
     depends_on:
       template-repository:
