Add step to check if PR is linked to an issue

--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -19,6 +19,11 @@ jobs:
         id: debug
         run: echo ${{ toJson(github) }}
 
+      - name: Check if PR is linked to an issue
+        id: check-linked-issue
+        run: |
+            PR_issue_url = "${{ github.event.pull_request.issue_url }}"
+            echo "PR issue url: $PR_issue_url"
     #   - name: Check if PR is linked to an issue
     #     id: check-linked-issue
     #     run: |
