Enhance debugging output in PR Validator workflow

--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
       - name: Debug
         id: debug
-        run: echo ${{ toJson(github) }}
+        run: |
+            echo "🔍 Debugging PR Validator Workflow"    
+            #echo ${{ toJson(github) }}
 
       - name: Check if PR is linked to an issue
         id: check-linked-issue
@@ -25,7 +27,7 @@ jobs:
         run: |
           PR_issue_url="${{ github.event.pull_request.issue_url }}"
           echo "PR issue url: $PR_issue_url"
-          
+
     #   - name: Check if PR is linked to an issue
     #     id: check-linked-issue
     #     run: |
