--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -111,8 +111,11 @@ jobs:
                     project {
                       title
                     }
-                    fieldValuesByName {
-                      TestCaseRequired {
+                    fieldValues(first: 10) {
+                      nodes {
+                        field {
+                          name
+                        }
                         ... on ProjectV2ItemFieldSingleSelectValue {
                           name
                         }
@@ -152,7 +155,7 @@ jobs:
           echo "✅ Issue #$ISSUE_NUMBER is in the '$PROJECT_NAME' project"
           
           # Check TestCaseRequired field
-          TEST_CASE_REQUIRED=$(echo "$ISSUE_RESULT" | jq --arg project "$PROJECT_NAME" -r '.data.repository.issue.projectItems.nodes[] | select(.project.title == $project) | .fieldValuesByName.TestCaseRequired.name // "not-set"' | head -1)
+          TEST_CASE_REQUIRED=$(echo "$ISSUE_RESULT" | jq --arg project "$PROJECT_NAME" -r '.data.repository.issue.projectItems.nodes[] | select(.project.title == $project) | .fieldValues.nodes[] | select(.field.name == "TestCaseRequired") | .name // "not-set"' | head -1)
           
           if [ "$TEST_CASE_REQUIRED" = "not-set" ]; then
             echo "::endgroup::"
