--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -135,27 +135,8 @@ jobs:
             -F name="$REPO_NAME" \
             -F number="$ISSUE_NUMBER")
           
-          # Check if issue is in the required project
-          PROJECT_FOUND=$(echo "$ISSUE_RESULT" | jq --arg project "$PROJECT_NAME" '[.data.repository.issue.projectItems.nodes[] | select(.project.title == $project)] | length > 0')
-          
-          if [ "$PROJECT_FOUND" != "true" ]; then
-            echo "::endgroup::"
-            echo "::error title=Validation Failed: Issue Not in Required Project::❌ Issue #$ISSUE_NUMBER is not part of the '$PROJECT_NAME' project."
-            echo ""
-            echo "**Why this check failed:**"
-            echo "This repository requires linked issues to be part of the '$PROJECT_NAME' project for proper tracking and organization."
-            echo ""
-            echo "**How to fix it:**"
-            echo "1. Go to issue #$ISSUE_NUMBER"
-            echo "2. Add it to the '$PROJECT_NAME' project from the right sidebar"
-            echo "3. Once added, this validation will pass"
-            exit 1
-          fi
-          
-          echo "✅ Issue #$ISSUE_NUMBER is in the '$PROJECT_NAME' project"
-          
           # Check TestCaseRequired field
-          TEST_CASE_REQUIRED=$(echo "$ISSUE_RESULT" | jq --arg project "$PROJECT_NAME" -r '.data.repository.issue.projectItems.nodes[] | select(.project.title == $project) | .fieldValues.nodes[] | select(.field.name == "TestCaseRequired") | .name // "not-set"' | head -1)
+          TEST_CASE_REQUIRED=$(echo "$ISSUE_RESULT" | jq --arg project "$PROJECT_NAME" -r '.data.repository.issue.projectItems.nodes[] | select(.project.title == $project) | .fieldValues.nodes[0] | .name // "not-set"' | head -1)
           
           if [ "$TEST_CASE_REQUIRED" = "not-set" ]; then
             echo "::endgroup::"
