Refactor project field selection in PR validation to enhance query structure

--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -109,7 +109,9 @@ jobs:
                       nodes {
                         ... on ProjectV2ItemFieldSingleSelectValue {
                           field {
-                            name
+                            ... on ProjectV2SingleSelectField {
+                              name
+                            }
                           }
                           name
                         }
