Enable cleanup action with schedule and permissions

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,9 +1,12 @@
-# name: "Cleanup Action"
-# on:
-#   workflow_dispatch:
-#   schedule:
-#     - cron: "0 1 * * 1" # Runs every Monday at 2:00 AM UTC
-    
+name: "Cleanup Action"
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 1 * * 1" # Runs every Monday at 2:00 AM UTC
+
+permissions:
+  contents: read
+
 jobs:
   ghcr-cleanup:
     name: ghcr.io cleanup action
